# LearnOpenGL

./: CMakeLists.txt
.cache/clangd/index/: glad.c.8E787F71ABF9B101.idx  glad.h.88FC20921A062D25.idx  khrplatform.h.E99950536876F57A.idx  main.cpp.A050A2B0B23E2107.idx  main.cpp.B109A019808911C4.idx
assets/shaders/: cube.vert  shader.vert  tunnel.frag
include/: camera.hpp  pch.hpp  scene.hpp  shader.hpp  texture.hpp
include/core/: window.hpp
include/glad/: glad.h
include/render/: camera.hpp  mesh.hpp  shader.hpp
include/scene/: scene.hpp
shaders/: cube.frag  cube.vert  light.frag  shader.frag  shader.vert
src/: glad.c  main.cpp  scene.cpp  texture.cpp
src/core/: window.cpp
src/render/: mesh.cpp  texture.cpp
src/scene/: scene.cpp
